# tasker

./: .gitignore  Makefile  README.md
backend/: Cargo.toml  build.rs
backend/data/: storage.json
backend/src/: lib.rs  main.rs  storage.rs
backend/src/protogen/: example.rs  google.api.rs  mod.rs
backend/src/services/: mod.rs  task_service.rs  user_service.rs
backend/src/types/: mod.rs  timestamp.rs
docs/: message.swagger.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: client.ts
frontend/src/proto/: message.ts  message_pb.ts
frontend/src/proto/google/api/: annotations_pb.ts  field_behavior_pb.ts  http.ts  http_pb.ts
frontend/src/proto/google/protobuf/: descriptor.ts  empty.ts  timestamp.ts
frontend/src/proto/validate/: validate_pb.ts
proto/: message.proto
