[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
tonic-web = "0.10"
tonic-reflection = "0.10"
prost = "0.12"
prost-types = "0.12"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
axum = "0.6"
hyper = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dashmap = "5.0"
once_cell = "1.0"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
prost-wkt-build = "0.6"